--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/DemoStudy.tlog/link.read.1.tlog
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/DemoStudy.tlog/link.command.1.tlog
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/DemoStudy.tlog/DemoStudy.lastbuildstate
+数据结构和算法/code/DemoStudy/Debug/DemoStudy.pdb
+数据结构和算法/code/DemoStudy/Debug/DemoStudy.ilk
+数据结构和算法/code/DemoStudy/Debug/DemoStudy.exe
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/.suo
