--- a/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj.filters
+++ b/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj.filters
@@ -36,4 +36,9 @@
       <Filter>Graph</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="2012042720381722.png">
+      <Filter>Graph</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
