--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@
 数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
 数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj.filters
 数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/DataMatrix.obj
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/DemoStudy.Build.CppClean.log
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/DemoStudy.vcxproj.FileListAbsolute.txt
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/GraphShortestPath.obj
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/Sort.obj
