--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/DemoStudy.vcxproj.FileListAbsolute.txt
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/GraphShortestPath.obj
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/Sort.obj
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/2dce764d123ec3a3/QUICKSORT.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/8a1b0e6eee8e7832/SORT.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/9b137c2c30623107/COMMON.ipch
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/common.obj
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/QuickSort.obj
