--- a/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
+++ b/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="common.cpp" />
     <ClCompile Include="DataMatrix.cpp" />
     <ClCompile Include="DemoStudy.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="GraphMST.cpp" />
     <ClCompile Include="GraphShortestPath.cpp" />
+    <ClCompile Include="QuickSort.cpp" />
     <ClCompile Include="Sort.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -152,6 +154,7 @@
     <ClInclude Include="Graph.h" />
     <ClInclude Include="GraphMST.h" />
     <ClInclude Include="GraphShortestPath.h" />
+    <ClInclude Include="QuickSort.h" />
     <ClInclude Include="Sort.h" />
   </ItemGroup>
   <ItemGroup>
