--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@
 数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/9b137c2c30623107/COMMON.ipch
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/common.obj
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/QuickSort.obj
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/283b83ee4dd4d981/MERGESORT.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/38c89767ae30503e/QUICKSORT.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/df847438f8e25155/DEMOSTUDY.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/ec87d31b5c42ed10/COMMON.ipch
+数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/common.obj
+数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/MergeSort.obj
+数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/QuickSort.obj
