--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@
 数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/common.obj
 数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/MergeSort.obj
 数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/QuickSort.obj
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/4bf5edd2a7193fc8/MERGESORT.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/bacb78ef8c3e9c70/HEAPSORT.ipch
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/HeapSort.obj
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/MergeSort.obj
