--- a/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
+++ b/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="GraphMST.cpp" />
     <ClCompile Include="GraphShortestPath.cpp" />
+    <ClCompile Include="HeapSort.cpp" />
     <ClCompile Include="MergeSort.cpp" />
     <ClCompile Include="QuickSort.cpp" />
     <ClCompile Include="Sort.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="Graph.h" />
     <ClInclude Include="GraphMST.h" />
     <ClInclude Include="GraphShortestPath.h" />
+    <ClInclude Include="HeapSort.h" />
     <ClInclude Include="MergeSort.h" />
     <ClInclude Include="QuickSort.h" />
     <ClInclude Include="Sort.h" />
