--- a/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj.filters
+++ b/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClCompile Include="GraphShortestPath.cpp">
       <Filter>Graph</Filter>
     </ClCompile>
-    <ClCompile Include="Sort.cpp">
-      <Filter>Graph</Filter>
-    </ClCompile>
     <ClCompile Include="common.cpp">
       <Filter>tool</Filter>
     </ClCompile>
@@ -49,6 +46,12 @@
       <Filter>Sort</Filter>
     </ClCompile>
     <ClCompile Include="MergeSort.cpp">
+      <Filter>Sort</Filter>
+    </ClCompile>
+    <ClCompile Include="Sort.cpp">
+      <Filter>Sort</Filter>
+    </ClCompile>
+    <ClCompile Include="HeapSort.cpp">
       <Filter>Sort</Filter>
     </ClCompile>
   </ItemGroup>
@@ -65,9 +68,6 @@
     <ClInclude Include="GraphShortestPath.h">
       <Filter>Graph</Filter>
     </ClInclude>
-    <ClInclude Include="Sort.h">
-      <Filter>Graph</Filter>
-    </ClInclude>
     <ClInclude Include="common.h">
       <Filter>tool</Filter>
     </ClInclude>
@@ -75,6 +75,12 @@
       <Filter>Sort</Filter>
     </ClInclude>
     <ClInclude Include="MergeSort.h">
+      <Filter>Sort</Filter>
+    </ClInclude>
+    <ClInclude Include="Sort.h">
+      <Filter>Sort</Filter>
+    </ClInclude>
+    <ClInclude Include="HeapSort.h">
       <Filter>Sort</Filter>
     </ClInclude>
   </ItemGroup>
