--- a/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
+++ b/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
@@ -146,8 +146,10 @@
     <ClCompile Include="GraphMST.cpp" />
     <ClCompile Include="GraphShortestPath.cpp" />
     <ClCompile Include="HeapSort.cpp" />
+    <ClCompile Include="InsertSort.cpp" />
     <ClCompile Include="MergeSort.cpp" />
     <ClCompile Include="QuickSort.cpp" />
+    <ClCompile Include="SelectSort.cpp" />
     <ClCompile Include="Sort.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -157,8 +159,10 @@
     <ClInclude Include="GraphMST.h" />
     <ClInclude Include="GraphShortestPath.h" />
     <ClInclude Include="HeapSort.h" />
+    <ClInclude Include="InsertSort.h" />
     <ClInclude Include="MergeSort.h" />
     <ClInclude Include="QuickSort.h" />
+    <ClInclude Include="SelectSort.h" />
     <ClInclude Include="Sort.h" />
   </ItemGroup>
   <ItemGroup>
