--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,9 @@
 数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/bacb78ef8c3e9c70/HEAPSORT.ipch
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/HeapSort.obj
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/MergeSort.obj
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/1e04869ce99d3631/SORT.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/ad5afbc43190d408/INSERTSORT.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/b44e471503bfa5b9/SELECTSORT.ipch
+数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/HeapSort.obj
+数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/InsertSort.obj
+数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/SelectSort.obj
