--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,9 @@
 数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/HeapSort.obj
 数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/InsertSort.obj
 数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/SelectSort.obj
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/61a02b7700e909e8/AVLTREETMP.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/be4a508c04289f0d/AVLTREE.ipch
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/AvlTree.obj
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/AvlTreeTmp.obj
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/InsertSort.obj
+数据结构和算法/code/DemoStudy/DemoStudy/Debug/SelectSort.obj
