--- a/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
+++ b/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AvlTree.cpp" />
+    <ClCompile Include="AvlTreeTmp.cpp" />
     <ClCompile Include="common.cpp" />
     <ClCompile Include="DataMatrix.cpp" />
     <ClCompile Include="DemoStudy.cpp" />
@@ -153,6 +155,8 @@
     <ClCompile Include="Sort.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AvlTree.h" />
+    <ClInclude Include="AvlTreeTmp.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="DataMatrix.h" />
     <ClInclude Include="Graph.h" />
