--- a/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj.filters
+++ b/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="tool">
       <UniqueIdentifier>{8bbbaa5a-9494-4646-8d1e-47fc68638029}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Tree">
+      <UniqueIdentifier>{f1c2b6c2-9cba-40d4-8f81-da01fdefa0c2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoStudy.cpp">
@@ -60,6 +63,12 @@
     <ClCompile Include="InsertSort.cpp">
       <Filter>Sort</Filter>
     </ClCompile>
+    <ClCompile Include="AvlTree.cpp">
+      <Filter>Tree</Filter>
+    </ClCompile>
+    <ClCompile Include="AvlTreeTmp.cpp">
+      <Filter>Tree</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphMST.h">
@@ -94,6 +103,12 @@
     </ClInclude>
     <ClInclude Include="InsertSort.h">
       <Filter>Sort</Filter>
+    </ClInclude>
+    <ClInclude Include="AvlTree.h">
+      <Filter>Tree</Filter>
+    </ClInclude>
+    <ClInclude Include="AvlTreeTmp.h">
+      <Filter>Tree</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
