--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,8 @@
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/AvlTreeTmp.obj
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/InsertSort.obj
 数据结构和算法/code/DemoStudy/DemoStudy/Debug/SelectSort.obj
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/789deaa2d768f18c/SOLUTION_76.ipch
+数据结构和算法/code/DemoStudy/.vs/DemoStudy/v16/ipch/AutoPCH/feedf63714849490/TMP.ipch
+数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/AvlTree.obj
+数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/AvlTreeTmp.obj
+数据结构和算法/code/DemoStudy/DemoStudy/x64/Debug/Solution_76.obj
