--- a/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj.filters
+++ b/数据结构和算法/code/DemoStudy/DemoStudy/DemoStudy.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Tree">
       <UniqueIdentifier>{f1c2b6c2-9cba-40d4-8f81-da01fdefa0c2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="tmp">
+      <UniqueIdentifier>{175a3227-86ac-4efa-9e61-226060f02fad}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoStudy.cpp">
@@ -69,6 +72,9 @@
     <ClCompile Include="AvlTreeTmp.cpp">
       <Filter>Tree</Filter>
     </ClCompile>
+    <ClCompile Include="tmp.cpp">
+      <Filter>tmp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphMST.h">
@@ -109,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="AvlTreeTmp.h">
       <Filter>Tree</Filter>
+    </ClInclude>
+    <ClInclude Include="tmp.h">
+      <Filter>tmp</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
